static/css/common_data.css
.common_container {
	margin-top: 5%;
	width: 100%;
	height: 400px;
	background-color: rgba(245, 245, 245, 0.40);
	position: relative;
	overflow: hidden; /* This is a crappy fix to handle child floating elements that overflow this container. Should eventually implement a better fix. */
}

.common_container p {
	text-indent:50px;
	color:#CCC !important;
}

.common_galleria { 
	width: 55%;
	height: 100%;
	background-color: black;
	float:left;
} 

.associated_container {
	color: black;
	width: 18.5%;
	height: 100%;
	float: right;
	margin-left: 2%;
	padding-left: 1%;
	padding-right: 1%;
}

.associated_crises {
	background-color: rgba(220, 31, 38, 0.50);
}

.associated_people {
	background-color: rgba(0, 176, 236, 0.50);
}

.associated_organizations {
	background-color: rgba(215, 113, 159, 0.50);
}

.general_info_container {
	width: 37%;
	height: 96%;
	float: left;
	margin-right: 3%;

	padding: 2% 1.5% 2% 1.5%;

	background-color: rgba(25, 25, 25, 0.90);
	color: white;
	float: left;
}

.impact_container {
	width: 56%;
	height: 100%;
	float: right;
	color: white;
}

#human_impact {
	background-color: rgba(25, 25, 25, 0.90);
	height: 40%;
	margin: 0% 0% 3% 0%;
	padding: 2% 3% 2% 3%;
}

#economic_impact {
	background-color: rgba(25, 25, 25, 0.90);
	height: 43%;
	margin: 3% 0% 0% 0%;
	padding: 2% 3% 2% 3%;
}

#history_box {
	width: 60%;
	background-color: rgba(25, 25, 25, 0.90);
}

#contact_box {
	width: 60%;
	background-color: rgba(25, 25, 25, 0.90);
}

#external_links_box {
	width: 97%;
	padding: 2% 1.5% 2% 1.5%;
	color: white;
	background-color: rgba(25, 25, 25, 0.90);
	height: 100px;
}

